--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,8 @@
 <header>
 <h1>{{screamIt pageTitle}}</h1>
 <h1>This is {{getCurrentYear}}</h1>
+<p><a href="/">Home</a></p>
+<p><a href="/about">About</a></p>
+<p><a href="/projects">Projects</a></p>
 
-<a href="/">Home</a>
-<a href="/about">About</a>
 </header>
